--- a/todolist/static/front-end/src/app/components/task/task-search.component.html
+++ b/todolist/static/front-end/src/app/components/task/task-search.component.html
@@ -1,1 +1,4 @@
-<p>task-search works!</p>
+<form class="d-flex {{class}}" role="search">
+    <input class="form-control me-2" type="search" placeholder="{{placeholder}}" aria-label="Search">
+    <button class="btn btn-primary" type="submit">Search</button>
+</form>
